--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,19 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.6.7",
+    "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
-    "bootstrap": "^5.1.3",
     "cluster": "^0.7.7",
+    "cssnano": "^5.1.12",
     "eslint": "^8.19.0",
     "eslint-plugin-vue": "^9.2.0",
     "ipfs-core": "^0.15.4",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.53.0",
+    "tailwindcss": "^3.1.6",
     "util": "^0.12.4",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.13"
+    "vite": "^2.9.14"
   }
 }
