--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.19.0",
     "eslint-plugin-vue": "^9.2.0",
     "ipfs-core": "^0.15.4",
+    "pinia": "^2.0.16",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.6",
