--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/tailwindcss": "^1.0.0-beta.9",
+    "@formkit/vue": "^1.0.0-beta.9",
     "@headlessui/vue": "^1.6.7",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
