--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "tailwindcss": "^3.1.6",
     "util": "^0.12.4",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
