--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.1.0",
     "@fastify/cors": "^8.0.0",
+    "@fastify/multipart": "^7.1.0",
     "dotenv": "^16.0.1",
     "fastify": "^4.2.1",
     "mysql2": "^2.3.3",
