--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.6.7",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "cluster": "^0.7.7",
     "cssnano": "^5.1.12",
     "eslint": "^8.20.0",
