big work with backend

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,4 +1,16 @@
+TZ=UTC
 LISTEN_HOST=127.0.0.1
 LISTEN_PORT=3090
 
-SQL=mysql://root@127.0.0.1:3306/nft-moments
+# NOTE: only used in development
+VITE_URL=http://localhost:3003/
+
+SQL_CONNECTION=mysql://root:root@localhost/nft-moments
+
+AWS_ACCESS_KEY_ID=access_key_dev
+AWS_SECRET_ACCESS_KEY=secret_key_dev
+
+S3_REGION=eu-central-1
+S3_BUCKET_INCOMING_MEDIA=incoming-media
+S3_BUCKET_ORIGINAL_MEDIA=original-media
+S3_BUCKET_MEDIA_CACHE=media
