--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@fastify/autoload": "^5.1.0",
     "@fastify/cors": "^8.0.0",
+    "@fastify/http-proxy": "^8.2.1",
     "@fastify/multipart": "^7.1.0",
+    "@fastify/static": "^6.4.0",
     "dotenv": "^16.0.1",
     "fastify": "^4.2.1",
+    "fastify-favicon": "^4.1.0",
     "mysql2": "^2.3.3",
     "pino-pretty": "^8.1.0",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.3.0"
+    "@faker-js/faker": "^7.3.0",
+    "fastify-static": "^4.7.0",
+    "pino-multi-stream": "^6.0.0"
   }
 }
