--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -51,6 +51,12 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@master
+      with:
+        install: true
+
     - name: Cache Docker layers
       uses: actions/cache@v3
       with:
