--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -101,6 +101,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
