--- a/backend/.env_example
+++ b/backend/.env_example
@@ -7,6 +7,8 @@ VITE_URL=http://localhost:3003/
 
 SQL_CONNECTION=mysql://root:root@localhost/nft-moments
 
+JWT_SECRET=slava_ukraini_smert_moscalam
+
 AWS_ACCESS_KEY_ID=access_key_dev
 AWS_SECRET_ACCESS_KEY=secret_key_dev
 
