--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,14 @@
     "@fastify/autoload": "^5.1.0",
     "@fastify/cors": "^8.0.0",
     "@fastify/http-proxy": "^8.2.1",
+    "@fastify/jwt": "^6.3.1",
     "@fastify/multipart": "^7.1.0",
     "@fastify/static": "^6.4.0",
     "dotenv": "^16.0.1",
-    "fastify": "^4.2.1",
+    "fastify": "^4.3.0",
     "mysql2": "^2.3.3",
-    "pino-pretty": "^8.1.0",
     "sequelize": "^6.21.3",
+    "tronweb": "^4.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
