--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.2.0",
     "ipfs-core": "^0.15.4",
+    "notiwind": "^1.2.6",
     "pinia": "^2.0.16",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.53.0",
