--- a/backend/.env_example
+++ b/backend/.env_example
@@ -16,3 +16,12 @@ S3_REGION=eu-central-1
 S3_BUCKET_INCOMING_MEDIA=incoming-media
 S3_BUCKET_ORIGINAL_MEDIA=original-media
 S3_BUCKET_MEDIA_CACHE=media
+
+SQS_QUEUE_RENDER_IMAGE=http://localhost:9324/000000000000/renderImage
+SQS_QUEUE_RENDER_VIDEO=http://localhost:9324/000000000000/renderVideo
+SQS_REGION=eu-central-1
+
+SQS_ENDPOINT=http://localhost:9324
+
+FFPROBE_PATH=/usr/local/bin/ffprobe
+FFMPEG_PATH=/usr/local/bin/ffmpeg
