--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.135.0",
     "@fastify/autoload": "^5.1.0",
     "@fastify/cors": "^8.0.0",
     "@fastify/http-proxy": "^8.2.1",
@@ -18,14 +19,18 @@
     "@fastify/static": "^6.4.0",
     "dotenv": "^16.0.1",
     "fastify": "^4.3.0",
+    "mime-types": "^2.1.35",
     "mysql2": "^2.3.3",
+    "package-lock": "^1.0.5",
     "sequelize": "^6.21.3",
     "tronweb": "^4.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.135.0",
     "@faker-js/faker": "^7.3.0",
     "fastify-static": "^4.7.0",
-    "pino-multi-stream": "^6.0.0"
+    "pino-multi-stream": "^6.0.0",
+    "pino-pretty": "^8.1.0"
   }
 }
