--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL_PREFIX=http://localhost:3090/api
+VITE_API_URL_PREFIX=https://nftmoments.fun/api
 VITE_APP_LOCALSTORAGE_KEY_NAME=nft_moments
