--- a/backend/.env_example
+++ b/backend/.env_example
@@ -5,7 +5,7 @@ LISTEN_PORT=3090
 # NOTE: only used in development
 VITE_URL=http://localhost:3003/
 
-SQL_CONNECTION=mysql://root:root@localhost/nft-moments
+SQL_CONNECTION=mysql://root:root@localhost/momenty
 
 JWT_SECRET=slava_ukraini_smert_moscalam
 
