--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@formkit/vue": "^1.0.0-beta.9",
     "@headlessui/vue": "^1.6.7",
     "@tailwindcss/forms": "^0.5.2",
+    "@vueuse/core": "^9.0.2",
     "cssnano": "^5.1.12",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.3.0",
