--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "cssnano": "^5.1.12",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.3.0",
+    "ethers": "^5.6.9",
     "notiwind": "^1.2.6",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.54.0",
