--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,19 +12,19 @@
     "@formkit/vue": "^1.0.0-beta.9",
     "@headlessui/vue": "^1.6.7",
     "@tailwindcss/forms": "^0.5.2",
-    "@vueuse/core": "^9.0.2",
+    "@ts-pro/vue-eternal-loading": "^1.2.0",
+    "@vueuse/core": "^9.1.0",
     "cssnano": "^5.1.12",
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "ethers": "^5.6.9",
     "notiwind": "^1.2.6",
     "postcss-preset-env": "^7.7.2",
-    "sass": "^1.54.2",
-    "tailwindcss": "^3.1.7",
+    "sass": "^1.54.3",
+    "tailwindcss": "^3.1.8",
     "util": "^0.12.4",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3",
-    "vue3-carousel": "^0.1.40"
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
