--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "ethers": "^5.6.9",
+    "gsap": "^3.10.4",
     "notiwind": "^1.2.6",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.54.3",
