--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,59 +1,21 @@
 {
   "parser": "@babel/eslint-parser",
-
+  "root": true,
   "env": {
-    "es2020": true,
-    "node": true,
-    "mocha": true
+      "node": true,
+      "es2021": true
   },
-
-  "parserOptions": {
-    "ecmaVersion": 11,
-    "sourceType": "module",
-    "requireConfigFile": false
-  },
-
   "extends": "eslint:recommended",
-
-	"globals":{
-    "BigInt":true
+  "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
   },
-
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": "off",
-    "semi": [
-      "error",
-      "always"
-    ],
-    "comma-dangle": "error",
-    "arrow-body-style": [2, "as-needed"],
-    "arrow-parens": [2, "as-needed"],
-    "arrow-spacing": [2, { "before": true, "after": true }],
-    "constructor-super": 2,
-    "no-await-in-loop": 0,
-    "no-class-assign": 2,
-    "no-confusing-arrow": 2,
-    "no-const-assign": 2,
-    "no-dupe-class-members": 2,
-    "no-duplicate-imports": 2,
-    "no-new-symbol": 2,
-    "no-this-before-super": 2,
-    "no-useless-computed-key": 2,
-    "no-useless-constructor": 2,
-    "no-var": 2,
-    "object-shorthand": [2, "always"],
-    "prefer-arrow-callback": 2,
-    "prefer-const": 2,
-    "prefer-numeric-literals": 2,
-    "prefer-rest-params": 2,
-    "prefer-spread": 2
+      "prefer-const": "error",
+      "no-promise-executor-return": "error",
+      "no-template-curly-in-string": "error",
+      "no-unreachable-loop": "error",
+      "require-atomic-updates": "warn",
+      "no-unsafe-optional-chaining": "error"
   }
 }
