--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.mjs",
+    "lint": "eslint *mjs --ext .js,.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "@fastify/jwt": "^6.3.2",
     "@fastify/static": "^6.5.0",
     "dotenv": "^16.0.1",
+    "eslint": "^8.21.0",
     "ethers": "^5.6.9",
     "fastify": "^4.4.0",
     "mime-types": "^2.1.35",
@@ -27,9 +29,13 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.145.0",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
+    "@babel/preset-env": "^7.18.10",
     "@faker-js/faker": "^7.4.0",
     "fastify-static": "^4.7.0",
     "pino-multi-stream": "^6.0.0",
-    "pino-pretty": "^8.1.0"
+    "pino-pretty": "^9.0.0"
   }
 }
