--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "tailwindcss": "^3.1.8",
     "util": "^0.12.4",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue-social-sharing": "^4.0.0-alpha4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
