--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 VITE_API_URL_PREFIX=https://momenty.io/api
 VITE_APP_LOCALSTORAGE_KEY_NAME=momenty
+VITE_MOMENT_CONTRACT=0x2dCE49EF20f99B0AC09D175C0B6ceD27e4a751e7
+VITE_MOMENT_MARKETPLACE=0x0C6962Fc67d513CA4B1A5a39230a5C765130c23E
