--- a/frontend/.env_example
+++ b/frontend/.env_example
@@ -1,2 +1,4 @@
 VITE_API_URL_PREFIX=http://localhost:3090/api
 VITE_APP_LOCALSTORAGE_KEY_NAME=momenty
+VITE_MOMENT_CONTRACT=xxx
+VITE_MOMENT_MARKETPLACE=xxx
