--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.22.0",
     "ethers": "^5.6.9",
     "fastify": "^4.5.2",
+    "ipfs-core": "^0.15.4",
     "mime-types": "^2.1.35",
     "mysql2": "^2.3.3",
     "package-lock": "^1.0.5",
