--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,27 @@
   "dependencies": {
     "@formkit/tailwindcss": "^1.0.0-beta.9",
     "@formkit/vue": "^1.0.0-beta.9",
-    "@headlessui/vue": "^1.6.7",
-    "@tailwindcss/forms": "^0.5.2",
+    "@headlessui/vue": "^1.7.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@ts-pro/vue-eternal-loading": "^1.2.0",
-    "@vueuse/core": "^9.1.0",
+    "@vueuse/core": "^9.2.0",
     "cssnano": "^5.1.13",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^8.23.1",
+    "eslint-plugin-vue": "^9.4.0",
     "ethers": "^5.7.0",
-    "gsap": "^3.11.0",
+    "gsap": "^3.11.1",
+    "near-api-js": "^1.0.0",
     "notiwind": "^1.2.6",
-    "postcss-preset-env": "^7.8.0",
-    "sass": "^1.54.5",
+    "postcss-preset-env": "^7.8.1",
+    "sass": "^1.54.9",
     "tailwindcss": "^3.1.8",
     "util": "^0.12.4",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3",
+    "vue": "^3.2.39",
+    "vue-router": "^4.1.5",
     "vue-social-sharing": "^4.0.0-alpha4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.9"
+    "@vitejs/plugin-vue": "^3.1.0",
+    "vite": "^3.1.0"
   }
 }
